fix(menu-drawer): Carousel's z-index bug fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -39,7 +39,7 @@
     position: fixed;
     background: #00000030;
     inset: 0;
-    z-index: 2;
+    z-index: 3;
     /* bình thường thì ẩn overlay đi */
     opacity: 0;
     visibility: hidden;
@@ -56,7 +56,7 @@
     background-color: var(--menu-color);
     inset: 0 40% 0 0;
     min-width: 350px;
-    z-index: 2;
+    z-index: 4;
     transform: translateX(-100%);
     transition: 0.5s;
     padding: 60px;
